<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_main"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:src="@drawable/main_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/text_date"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main" />

        <ImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:contentDescription="@string/imageview"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main"
            app:layout_constraintVertical_bias="0.384"
            app:srcCompat="@drawable/ic_person_outline" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_breaking_news"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_main" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_breaking_news"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_breaking_item"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/iv_breaking_item"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/imageview"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/main_banner" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title_breaking_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_breaking_item"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/dummy_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_author"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:src="@drawable/ava" />

                <TextView
                    android:id="@+id/tv_author_breaking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_breaking_item"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/iv_author"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tv_date_release_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_breaking_item"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_toEndOf="@id/tv_author_breaking"
                    android:gravity="end"
                    android:text="@string/text_date" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/hs_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_breaking_news">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/text_information"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_magazine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/text_magazine"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/text_media"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_business"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/text_business"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_international"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/text_international"
                    android:textSize="18sp" />


            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hs_main"
            tools:listitem="@layout/item_news"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>